// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`punctuationTrim renders 0 1`] = `
Array [
  .c0 {
  punctuation-trim: 0;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: 0;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: 0;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`punctuationTrim renders function 1`] = `
Array [
  .c0 {
  punctuation-trim: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: has;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: has;
}

<div
    className="c0"
  />,
]
`;

exports[`punctuationTrim renders invalid theme path 1`] = `
Array [
  .c0 {
  punctuation-trim: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`punctuationTrim renders negative number 1`] = `
Array [
  .c0 {
  punctuation-trim: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`punctuationTrim renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    punctuation-trim: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    punctuation-trim: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    punctuation-trim: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    punctuation-trim: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    punctuation-trim: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    punctuation-trim: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    punctuation-trim: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    punctuation-trim: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    punctuation-trim: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    punctuation-trim: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    punctuation-trim: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    punctuation-trim: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    punctuation-trim: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    punctuation-trim: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    punctuation-trim: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    punctuation-trim: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`punctuationTrim renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    punctuation-trim: July;
  }
}

@media April {
  .c0 {
    punctuation-trim: August;
  }
}

@media January {
  .c0 {
    punctuation-trim: September;
  }
}

@media April {
  .c0 {
    punctuation-trim: November;
  }
}

@media June {
  .c0 {
    punctuation-trim: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    punctuation-trim: July;
  }
}

@media April {
  .c0 {
    punctuation-trim: August;
  }
}

@media January {
  .c0 {
    punctuation-trim: September;
  }
}

@media April {
  .c0 {
    punctuation-trim: November;
  }
}

@media June {
  .c0 {
    punctuation-trim: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    punctuation-trim: January;
  }
}

@media April {
  .c0 {
    punctuation-trim: December;
  }
}

@media January {
  .c0 {
    punctuation-trim: April;
  }
}

@media April {
  .c0 {
    punctuation-trim: May;
  }
}

@media June {
  .c0 {
    punctuation-trim: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    punctuation-trim: January;
  }
}

@media April {
  .c0 {
    punctuation-trim: December;
  }
}

@media January {
  .c0 {
    punctuation-trim: April;
  }
}

@media April {
  .c0 {
    punctuation-trim: May;
  }
}

@media June {
  .c0 {
    punctuation-trim: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`punctuationTrim renders postitive number 1`] = `
Array [
  .c0 {
  punctuation-trim: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`punctuationTrim renders string 1`] = `
Array [
  .c0 {
  punctuation-trim: July;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: July;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: June;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: June;
}

<div
    className="c0"
  />,
]
`;

exports[`punctuationTrim renders valid theme path 1`] = `
Array [
  .c0 {
  punctuation-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  punctuation-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
